# python-backend-template

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: users.py
app/api/v1/routes/: login.py  users.py
app/core/: config.py  db.py  security.py
app/crud/: user.py
app/models/: auth.py  user.py
app/utils/: email_utils.py  logging_utils.py  login_utils.py
config/: nginx.conf
tests/: conftest.py
tests/api/v1/: test_users.py
tests/core/: test_db.py
