[tool.poetry]
name = "python-backend-template"
version = "0.1.0"
description = ""
authors = ["Terri Jang <terricodes@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
django = "4.2"
pytest = "^8.3.3"
mysqlclient = "^2.2.4"
redis = "^5.1.1"
django-redis = "^5.4.0"
gunicorn = "^23.0.0"
uvicorn = "^0.31.0"
black = "^24.8.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
ruff = "^0.5.3"
black = "^24.4.2"
pytest = "^8.2.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["README.md"]

[tool.ruff.lint]
ignore = ["E203", "E302", "E305", "E401", "E402", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false
strict = true
ignore_missing_imports = true
no_namespace_packages = true
